force-app/main/default/objects/ServiciosPacks__c/ServiciosPacks__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ServiciosPacks</label>
</CustomObject>