force-app/main/default/objects/ServiciosPacks__c/fields/Equipos_instalar__c.field-meta.xml
<CustomField>
    <fullName>Equipos_instalar__c</fullName>
    <label>Equipos instalar</label>
    <length>80</length>
    <type>Text</type>
</CustomField>