force-app/main/default/objects/ServiciosPacks__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre de servicio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>