force-app/main/default/objects/ServiciosPacks__c/fields/Orden_de_visualizacion__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_visualizacion__c</fullName>
    <label>Orden de visualización</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>