force-app/main/default/objects/ServiciosPacks__c/listViews/PRO.listView-meta.xml
<ListView>
    <fullName>PRO</fullName>
    <columns>NAME</columns>
    <columns>Equipos_instalar__c</columns>
    <columns>Importe_mensual__c</columns>
    <columns>Incluido__c</columns>
    <columns>Nombre__c</columns>
    <columns>Numero_de_pack__c</columns>
    <columns>Orden_de_visualizacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Numero_de_pack__c</field>
        <operation>equals</operation>
        <value>4,5,6</value>
    </filters>
    <label>PRO</label>
    <language>es</language>
</ListView>